# lpad

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/lpad/: __init__.py  auth.py  branch.py  bugs.py  cache.py  color.py  drafts.py  editor.py  main.py  repo.py  templates.py
tests/: conftest.py  test_branch.py  test_bugs.py  test_cache.py  test_color.py  test_drafts.py  test_main_cli.py  test_repo.py  test_templates.py
