[project]
name = "lpad"
version = "0.1.0"
description = "A focused CLI tool for working with Launchpad bugs"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    { name = "Simon Johnsson", email = "simon.johnsson@canonical.com" }
]
requires-python = ">=3.12"
keywords = ["launchpad", "ubuntu", "bugs", "sru", "packaging", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Bug Tracking",
]
dependencies = [
    "launchpadlib>=2.1.0",
    "shtab>=1.8.1",
]

[project.urls]
Homepage = "https://github.com/BAMF0/lpad"
Repository = "https://github.com/BAMF0/lpad"
Issues = "https://github.com/BAMF0/lpad/issues"

[project.scripts]
lpad = "lpad.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4"]

[tool.ruff.lint.isort]
known-first-party = ["lpad"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
files = ["src/lpad"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
